# CyPari

./: .gitignore  .hgignore  MANIFEST.in  Odarwin.tgz  README  README.rst  appveyor.py  appveyor.yml  build_pari.sh  pyproject.toml  setup.py
.github/workflows/: 32bit_windows.yml  64bit_windows.yml  linux.yml  macos.yml  wheels.yml  windows.yml
Version1/: MANIFEST.in  appveyor.yml  build_pari.sh  setup.py
Version1/cypari_src/: all.py  pari_errors.h
Version2/: MANIFEST.in  README.Windows  README.rst  README.v2  appveyor.py  appveyor.yml  build_pari.sh  libcache.cfg  pari-2.8.tgz  pari-2.9.1.patch  relocate.py  relocate_here.py  run_autogen.py  setup.py
Version2/Windows/: mingw_c.patch  pari_config.patch  (+2 more)
Windows/: README.Windows  appveyor.yml  clear_cache.txt  get_toolchain.py  msys64_env.sh  pari_config.patch  parigen.h.patch
autogen/: __init__.py  generator.py  paths.py  ret.py
cypari/: __init__.py  _pari.pxd  _pari.pyx  closure.pyx  convert.pyx  cypari.h  decl.pxi  gen.c  gen.pxd  gen.pyx  handle_error.pyx  implementation.c  long_generic.pxi  long_hack.h  long_win64py2.pxi  long_win64py3.pxi  macros.h  memory.pxd  memory.py  misc.h  pari_errors.h  pari_instance.pxd  pari_instance.pyx  paridecl.pxd  paripriv.pxd  py3tests.py  pylong_support.h  signals.pyx  stack.pyx  string_utils.pyx  struct_signals.h  test.py  tests.py  types.pxd  version.py
cypari_src/: __init__.py  cdefs.pxi  decl.pxi  gen.pxd  gen.pyx  misc.h  pari_instance.pxd  test.py  wordsize.h
macOS/: appveyor.yml  clear_cache.txt  rename_wheels.py
patches/: pari_2.15.patch  paristio.patch
(+90 files in other folders)
