[build-system]
requires = ["setuptools", "wheel", "cython"]

[tool.cibuildwheel]
build = "cp39* cp310* cp311* cp312* cp313* cp314*"
skip = "*musllinux* cp313t* cp314t**"
archs = "auto64"
test-command = "python -m cypari.test"
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
